--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 #Database
 *.sqlite3
 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -29,6 +30,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+staticfiles/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -91,5 +93,3 @@ ENV/
 # Spyder project settings
 .spyderproject
 
-# Rope project settings
-.ropeproject
