--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -20,6 +20,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         python manage.py collectstatic
+  
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
     - name: Selamdur
       run: echo "oğuzhan"
     - name: Run Tests
