changes  os user name as ec2-user

--- a/appspec.yml
+++ b/appspec.yml
@@ -2,14 +2,14 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/app
+    destination: /home/ec2-user/app
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
-      runas: ubuntu
+      runas: ec2-user
       
   ApplicationStart:
     - location: scripts/application_start.sh
       timeout: 300
-      runas: ubuntu
+      runas: ec2-user
