moves dependencies installing code block into application_start.sh

--- a/appspec.yml
+++ b/appspec.yml
@@ -9,7 +9,7 @@ hooks:
       timeout: 300
       runas: ec2-user
       
-  ApplicationStart:
+  AfterInstall:
     - location: scripts/application_start.sh
       timeout: 300
       runas: ec2-user
