--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,11 @@ files:
   - source: /
     destination: /home/ec2-user/app
 hooks:
+  ApplicationStop:
+    - location: scripts/application_stop.sh
+      timeout: 300
+      runas: ec2-user
+      
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
