--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-dj-database-url==0.5.0
-Django==4.0.2
-gunicorn==20.0.4
-psycopg2-binary==2.8.6
-wheel==0.35.1
-whitenoise==5.2.0
-
+Django==5.0.2
+dj-database-url==2.0.0
+gunicorn==21.2.0
+psycopg2-binary==2.9.6
+wheel==0.38.1
+whitenoise==6.5.0
+python-dotenv==1.0.1
